    - FAQ: How do I get Twitter to display something other than "from Perl Net::Twitter"?

3.11004 2009-02-09
    - Removed an extraneous tar ball from the distribution (no code changes)

3.11003 2009-01-29
    - Renamed "retweeted_of_me" REST API call to the correct "retweets_of_me" (Dan Moore @mgrdcm)
    - Back the Moose requirement down to 0.09 (earliest version with native traits)

3.11002 2009-01-28
    - Use Moose 0.94 with native traits (resolves CPAN testers failing reports)

3.11001 2009-01-28
    - Honor synthetic args (authenticate and since) for Lists API calls

3.11000 2009-01-27
    - Lists API overhaul; bug fixes, added parameters, documentation
    - Create meaninful names for anonymous classes; better error context
    - Added "Paging and Cursors" documentation section

3.10003 2009-12-15
    - Oops! Fixed bug in new test in t/10_net-twitter-regression.t (oh, the irony!)

3.10002 2009-12-15
    - Added netrc_machine option to new with default 'api.twitter.com'
    - Fixed: netrc failed without trait API::REST
    - Fixed: retweeted_{to,of}_me API URLs (RT#52784)

3.10001 2009-11-26
    - Fixed: new t/51_rate_limit.t needs to skip tests unless LWP >= 5.819

3.10000 2009-11-24
    - Fixed: ssl not applied when both Lists and REST api used
    - Added Role::RateLimit
    - Added trends_available and trends_location methods to the REST API
    - Documented the lat and long parameters to update

3.09000 2009-11-17
    - Bumped Net::OAuth requirement to 0.20 (hopefully resolves CPAN Testers failures)
    - Added users_search/find_people API method
    - Updated default apiurl: http://api.twitter.com/1
    - Deprecated apihost option to new
    - Fixed ssl handling for Lists API

3.08000 2009-11-02
    - return user_id and screen_name from request_access_token (Roberto Etcheverry)

3.07999_01 2009-10-23
    - Added experimental Lists API support

3.07004 2009-10-22
    - Fixed: cached request_token results in a stale authentication/authorization urls
