@@ -665,7 +665,7 @@ separated with commas.
 
 =item How do I get Twitter to display something other than "from Perl Net::Twitter"?
 
-If you set the source paramter to C<api>, twitter will display "from
+If you set the source parameter to C<api>, twitter will display "from
 API", and if you set it to the empty string, twitter will display, "from
 web".
 
