@@ -1,3 +1,5 @@
+    - Fixed: utf8 encoding error for latin1 using Basic Authentication
+    - Allow a pre-created user agent object as argument to new (ua => $ua)
     - FAQ: How do I get Twitter to display something other than "from Perl Net::Twitter"?
 
 3.11004 2009-02-09
